force-app/main/default/objects/Account/fields/CP_Bookkeeping_Access__c.field-meta.xml
<CustomField>
    <fullName>CP_Bookkeeping_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if customer have Client Portal access after free-trial ends</description>
    <inlineHelpText>Shows if customer have Client Portal access after free-trial ends</inlineHelpText>
    <label>CP Bookkeeping Access</label>
    <type>Checkbox</type>
</CustomField>