force-app/main/default/objects/Account/fields/CP_Extended_Storage__c.field-meta.xml
<CustomField>
    <fullName>CP_Extended_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if customer can upload up to 10G of documents.</description>
    <inlineHelpText>Shows if customer can upload up to 10G of documents.</inlineHelpText>
    <label>CP Extended Storage</label>
    <type>Checkbox</type>
</CustomField>