force-app/main/default/objects/Account/fields/Cryptocurrency__c.field-meta.xml
<CustomField>
    <fullName>Cryptocurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cryptocurrency</label>
    <type>Checkbox</type>
</CustomField>