force-app/main/default/objects/Account/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Account is through the CSA team.</description>
    <inlineHelpText>The Account is through the CSA team.</inlineHelpText>
    <label>CSA</label>
    <type>Checkbox</type>
</CustomField>