force-app/main/default/objects/Account/fields/CSA_Appointment__c.field-meta.xml
<CustomField>
    <fullName>CSA_Appointment__c</fullName>
    <description>The date and time of the Account&apos;s most recent CSA Appointment</description>
    <label>CSA Appointment</label>
    <type>DateTime</type>
</CustomField>