force-app/main/default/objects/Account/fields/Current_Tax_Approach__c.field-meta.xml
<CustomField>
    <fullName>Current_Tax_Approach__c</fullName>
    <label>Current Tax Approach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Turbo Tax or Software</fullName>
            </value>
            <value>
                <fullName>H&amp;R Block or Seasonal Location</fullName>
            </value>
            <value>
                <fullName>CPA or Accountant</fullName>
            </value>
            <value>
                <fullName>I Do It Myself</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>