force-app/main/default/objects/Account/fields/Current_Year_Expenses_Projection__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Expenses_Projection__c</fullName>
    <label>Current Year Expenses Projection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>$0-$25,000</fullName>
            </value>
            <value>
                <fullName>$25,001-$50,000</fullName>
            </value>
            <value>
                <fullName>$50,001-$100,000</fullName>
            </value>
            <value>
                <fullName>$100,001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>