force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <formula>IF( ISBLANK( P2C_Customer_ID__c ) , Account_Autonumber__c , P2C_Customer_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>