force-app/main/default/objects/Account/fields/Customer_Service_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Service Survey</label>
    <type>Checkbox</type>
</CustomField>