force-app/main/default/objects/Account/fields/Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Status__c</fullName>
    <description>Tracks the cleanliness of this data record</description>
    <label>Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Dirty</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>