force-app/main/default/objects/Account/fields/Date_business_aquired__c.field-meta.xml
<CustomField>
    <fullName>Date_business_aquired__c</fullName>
    <label>Date business aquired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>