force-app/main/default/objects/Account/fields/Date_For_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Date_For_Reassignment__c</fullName>
    <label>Date For Reassignment</label>
    <type>Date</type>
</CustomField>