force-app/main/default/objects/Account/fields/Date_of_death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_death__c</fullName>
    <label>Date of death</label>
    <length>100</length>
    <type>Text</type>
</CustomField>