force-app/main/default/objects/Account/fields/Date_of_first_wage_payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_wage_payment__c</fullName>
    <label>Date of first wage payment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>