force-app/main/default/objects/Account/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>Cancelled_Date__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>