force-app/main/default/objects/Account/fields/Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Days_Active__c</fullName>
    <formula>Cancelled_Date__c-Onboarding_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Active</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>