force-app/main/default/objects/Account/fields/Days_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Days_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Days Triggered</label>
    <type>Checkbox</type>
</CustomField>