force-app/main/default/objects/Account/fields/Deceased_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Middle_Name__c</fullName>
    <label>Deceased Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>