force-app/main/default/objects/Account/fields/Deceased_SSN__c.field-meta.xml
<CustomField>
    <fullName>Deceased_SSN__c</fullName>
    <label>Deceased SSN</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>