force-app/main/default/objects/Account/fields/Dedicated__c.field-meta.xml
<CustomField>
    <fullName>Dedicated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated</label>
    <type>Checkbox</type>
</CustomField>