force-app/main/default/objects/Account/fields/Dedicated_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated - Cancelled</label>
    <type>Checkbox</type>
</CustomField>