force-app/main/default/objects/Account/fields/Dedicated_client_Bookkeeping_intro_email__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_client_Bookkeeping_intro_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated client-Bookkeeping Intro Email</label>
    <type>Checkbox</type>
</CustomField>