force-app/main/default/objects/Account/fields/Dedicated_Client_Books__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Client_Books__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Client Books</label>
    <type>Checkbox</type>
</CustomField>