force-app/main/default/objects/Account/fields/Dedicated_Date__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Date__c</fullName>
    <label>Dedicated Date</label>
    <type>Date</type>
</CustomField>