force-app/main/default/objects/Account/fields/Discovery_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Call Completed</label>
    <type>Checkbox</type>
</CustomField>