force-app/main/default/objects/Account/fields/Discovery_Call_Deliverables_Sent__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_Deliverables_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Call Deliverables Sent</label>
    <type>Checkbox</type>
</CustomField>