force-app/main/default/objects/Account/fields/Discovery_Call_needs_to_be_rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_needs_to_be_rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Call needs to be rescheduled</label>
    <type>Checkbox</type>
</CustomField>