force-app/main/default/objects/Account/fields/Discovery_Call_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Call No-Show</label>
    <type>Checkbox</type>
</CustomField>