force-app/main/default/objects/Account/fields/Discovery_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_Scheduled_Date__c</fullName>
    <label>Discovery Call Scheduled Date</label>
    <type>DateTime</type>
</CustomField>