force-app/main/default/objects/Account/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <label>Discovery Date</label>
    <type>DateTime</type>
</CustomField>