force-app/main/default/objects/Account/fields/Discovery_Override__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Override</label>
    <type>Checkbox</type>
</CustomField>