force-app/main/default/objects/Account/fields/Dissolution__c.field-meta.xml
<CustomField>
    <fullName>Dissolution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consultation</description>
    <label>Dissolution</label>
    <type>Checkbox</type>
</CustomField>