force-app/main/default/objects/Account/fields/Distribute_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Date__c</fullName>
    <label>Distribute Date</label>
    <type>Date</type>
</CustomField>