force-app/main/default/objects/Account/fields/Downloaded_App__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downloaded App</label>
    <type>Checkbox</type>
</CustomField>