force-app/main/default/objects/Account/fields/DRP_Status__c.field-meta.xml
<CustomField>
    <fullName>DRP_Status__c</fullName>
    <inlineHelpText>Deluxe Recordkeeping package status</inlineHelpText>
    <label>DRP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipping Complete</fullName>
            </value>
            <value>
                <fullName>Waiting for another return</fullName>
            </value>
            <value>
                <fullName>see notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>