force-app/main/default/objects/Account/fields/ECE_Transfer__c.field-meta.xml
<CustomField>
    <fullName>ECE_Transfer__c</fullName>
    <label>ECE Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>No Answer, Form submitted</fullName>
            </value>
            <value>
                <fullName>No Answer, Form not submitted</fullName>
            </value>
            <value>
                <fullName>After hours, Form submitted</fullName>
            </value>
            <value>
                <fullName>After hours, Form not submitted</fullName>
            </value>
            <value>
                <fullName>Does not qualify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>