force-app/main/default/objects/Account/fields/EF_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>EF_Scheduled__c</fullName>
    <label>EF Scheduled</label>
    <type>DateTime</type>
</CustomField>