force-app/main/default/objects/Account/fields/EIDL_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>EIDL_Amount_Received__c</fullName>
    <label>EIDL Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>