force-app/main/default/objects/Account/fields/EIDL_Status__c.field-meta.xml
<CustomField>
    <fullName>EIDL_Status__c</fullName>
    <label>EIDL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applied</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Additional Info Request Sent</fullName>
            </value>
            <value>
                <fullName>Additional Info Received</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>