force-app/main/default/objects/Account/fields/EIN_data__c.field-meta.xml
<CustomField>
    <fullName>EIN_data__c</fullName>
    <label>EIN data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>