force-app/main/default/objects/Account/fields/EIN_Status__c.field-meta.xml
<CustomField>
    <fullName>EIN_Status__c</fullName>
    <label>EIN Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>