force-app/main/default/objects/Account/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>email</label>
    <type>Text</type>
</CustomField>