force-app/main/default/objects/Account/fields/embark__c.field-meta.xml
<CustomField>
    <fullName>embark__c</fullName>
    <formula>IF(
    Embark_client__c = TRUE, 
    IMAGE( &quot;/servlet/servlet.FileDownload?file=015j00000015idk&quot;, &quot;True image&quot;),
    IMAGE( &quot;/servlet/servlet.FileDownload?file=015j00000015idz&quot;, &quot;False image&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embark</label>
    <type>Text</type>
</CustomField>