force-app/main/default/objects/Account/fields/Embark_client__c.field-meta.xml
<CustomField>
    <fullName>Embark_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embark Client</label>
    <type>Checkbox</type>
</CustomField>