force-app/main/default/objects/Account/fields/Entitled_to_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>Entitled_to_Tax_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitled to Tax Return</label>
    <type>Checkbox</type>
</CustomField>