force-app/main/default/objects/Account/fields/Entity_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Entity_Tax_Classification__c</fullName>
    <label>Entity Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Personal Only</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>