force-app/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type (OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>LLC – Single Member</fullName>
            </value>
            <value>
                <fullName>LLC – Partnership</fullName>
            </value>
            <value>
                <fullName>LLC electing S Corp status</fullName>
            </value>
            <value>
                <fullName>LLC taxed as C Corp</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>