force-app/main/default/objects/Account/fields/Entity_Type_After_Discovery_Call__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_After_Discovery_Call__c</fullName>
    <description>Client Information</description>
    <label>Entity Type After Discovery Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Personal Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>