force-app/main/default/objects/Account/fields/Equip_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Equip_Cancellation__c</fullName>
    <label>Equip Cancellation Date</label>
    <type>Date</type>
</CustomField>