force-app/main/default/objects/Account/fields/Equip_Client__c.field-meta.xml
<CustomField>
    <fullName>Equip_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equip Client</label>
    <type>Checkbox</type>
</CustomField>