force-app/main/default/objects/Account/fields/Equip_Clientbooks__c.field-meta.xml
<CustomField>
    <fullName>Equip_Clientbooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equip Clientbooks</label>
    <type>Checkbox</type>
</CustomField>