force-app/main/default/objects/Account/fields/Equip_Products__c.field-meta.xml
<CustomField>
    <fullName>Equip_Products__c</fullName>
    <description>Temporary Field during Equip sunsetting for sales to know what products client had through Equip.</description>
    <inlineHelpText>Products client had through their Equip package.</inlineHelpText>
    <label>Equip Products</label>
    <length>45</length>
    <type>Text</type>
</CustomField>