force-app/main/default/objects/Account/fields/Equip_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Equip_Scheduled__c</fullName>
    <label>Equip Scheduled</label>
    <type>DateTime</type>
</CustomField>