force-app/main/default/objects/Account/fields/Equip_Start__c.field-meta.xml
<CustomField>
    <fullName>Equip_Start__c</fullName>
    <description>Eric will be loading the Equip Start date into Salesforce.</description>
    <label>Equip Start</label>
    <type>Date</type>
</CustomField>