force-app/main/default/objects/Account/fields/Error_Email__c.field-meta.xml
<CustomField>
    <fullName>Error_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Email</label>
    <type>Checkbox</type>
</CustomField>