force-app/main/default/objects/Account/fields/est_tax_reminder__c.field-meta.xml
<CustomField>
    <fullName>est_tax_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est Tax Reminder</label>
    <type>Checkbox</type>
</CustomField>