force-app/main/default/objects/Account/fields/Estimated_Business_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Business_Mileage__c</fullName>
    <label>Estimated Business Mileage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--</fullName>
                <default>true</default>
                <label>--</label>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>7500</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>15000</fullName>
            </value>
            <value>
                <fullName>20000</fullName>
            </value>
            <value>
                <fullName>25000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>