force-app/main/default/objects/Account/fields/Estimated_First_Year_Profits__c.field-meta.xml
<CustomField>
    <fullName>Estimated_First_Year_Profits__c</fullName>
    <label>Estimated First Year Profits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>$0</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <label>$5,000</label>
            </value>
            <value>
                <fullName>10000</fullName>
                <label>$10,000</label>
            </value>
            <value>
                <fullName>25000</fullName>
                <label>$25,000</label>
            </value>
            <value>
                <fullName>50000</fullName>
                <label>$50,000</label>
            </value>
            <value>
                <fullName>75000</fullName>
                <label>$75,000</label>
            </value>
            <value>
                <fullName>100000</fullName>
                <label>$100,000</label>
            </value>
            <value>
                <fullName>150000</fullName>
                <label>$150,000</label>
            </value>
            <value>
                <fullName>250000</fullName>
                <label>$250,000</label>
            </value>
            <value>
                <fullName>500000</fullName>
                <label>$500,000</label>
            </value>
            <value>
                <fullName>1000000</fullName>
                <label>$1,000,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>