force-app/main/default/objects/Account/fields/Estimated_Tax_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tax_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimated Tax email sent</label>
    <type>Checkbox</type>
</CustomField>