force-app/main/default/objects/Account/fields/Executor_first_name__c.field-meta.xml
<CustomField>
    <fullName>Executor_first_name__c</fullName>
    <label>Executor first name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>