force-app/main/default/objects/Account/fields/Executor_social_security_number__c.field-meta.xml
<CustomField>
    <fullName>Executor_social_security_number__c</fullName>
    <label>Executor social security number</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>