force-app/main/default/objects/Account/fields/Executor_title__c.field-meta.xml
<CustomField>
    <fullName>Executor_title__c</fullName>
    <label>Executor title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>