force-app/main/default/objects/Account/fields/Expected_1st_year_revenue2__c.field-meta.xml
<CustomField>
    <fullName>Expected_1st_year_revenue2__c</fullName>
    <label>Expected 1st year revenue (old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - $10,000</fullName>
            </value>
            <value>
                <fullName>$10,000 - $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>&gt; $100,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>