force-app/main/default/objects/Account/fields/Expected_annual_revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_annual_revenue__c</fullName>
    <label>Expected Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$0 – $10,000</fullName>
            </value>
            <value>
                <fullName>$10,000-$50,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$100,000</fullName>
            </value>
            <value>
                <fullName>&gt;$100,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>