force-app/main/default/objects/Account/fields/Expected_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Employees__c</fullName>
    <label>Expected Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21-25</fullName>
            </value>
            <value>
                <fullName>26-30</fullName>
            </value>
            <value>
                <fullName>31-35</fullName>
            </value>
            <value>
                <fullName>36-40</fullName>
            </value>
            <value>
                <fullName>41-45</fullName>
            </value>
            <value>
                <fullName>46-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>