force-app/main/default/objects/Account/fields/Extra_Partners__c.field-meta.xml
<CustomField>
    <fullName>Extra_Partners__c</fullName>
    <label>Extra Partners</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>