force-app/main/default/objects/Account/fields/ExtractedID__c.field-meta.xml
<CustomField>
    <fullName>ExtractedID__c</fullName>
    <label>ExtractedID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>