force-app/main/default/objects/Account/fields/EZCorp_Abandon__c.field-meta.xml
<CustomField>
    <fullName>EZCorp_Abandon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EZCorp Abandon</label>
    <type>Checkbox</type>
</CustomField>