force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Follower on Facebook</description>
    <inlineHelpText>This is a Marketing Field for current clients.</inlineHelpText>
    <label>Facebook</label>
    <type>Checkbox</type>
</CustomField>