force-app/main/default/objects/Account/fields/Faxed_2553_to_IRS__c.field-meta.xml
<CustomField>
    <fullName>Faxed_2553_to_IRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faxed 2553 to IRS</label>
    <type>Checkbox</type>
</CustomField>